--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="overlay"></div>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row mt-4">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if product.image %}
@@ -71,7 +71,7 @@
                                     <div class="form-group w-50">
                                         <div class="input-group">
                                             <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-black rounded-2"
+                                                <button class="decrement-qty btn btn-light-green rounded-2"
                                                     data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                     <span class="icon">
                                                         <i class="fas fa-minus"></i>
@@ -83,7 +83,7 @@
                                                 data-item_id="{{ product.id }}"
                                                 id="id_qty_{{ product.id }}">
                                             <div class="input-group-append">
-                                                <button class="increment-qty btn btn-black rounded-2"
+                                                <button class="increment-qty btn btn-light-green rounded-2"
                                                     data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                     <span class="icon">
                                                         <i class="fas fa-plus"></i>
@@ -132,7 +132,7 @@
                                                 <span class="text-uppercase">Back to Listing Levels</span>
                                             </a>
                                         {% else %}
-                                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-2 mt-5">
+                                            <a href="{% url 'products' %}" class="btn btn-outline-black border-muted rounded-2 mt-5">
                                                 <span class="icon">
                                                     <i class="fas fa-chevron-left"></i>
                                                 </span>
@@ -140,9 +140,9 @@
                                             </a>
                                         {% endif %}
                                         {% if product.sku == '12345678' %}
-                                        <input type="submit" class="btn btn-black rounded-2 text-uppercase mt-5" value="Add to Bag" {% if not my_listings %}disabled{% endif %}>
+                                        <input type="submit" class="btn btn-light-green btn-outline-muted rounded-2 text-uppercase mt-5" value="Add to Bag" {% if not my_listings %}disabled{% endif %}>
                                         {% else %}
-                                        <input type="submit" class="btn btn-black rounded-2 text-uppercase mt-5" value="Add to Bag">
+                                        <input type="submit" class="btn btn-light-green btn-outline-muted rounded-2 text-uppercase mt-5" value="Add to Bag">
                                         {% endif %}
                                     </div>
                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
