Change pageheader positioning on small devices

--- a/conversions/templates/conversions/add_conversion.html
+++ b/conversions/templates/conversions/add_conversion.html
@@ -15,11 +15,11 @@
     <div class="container">
         <div class="row">
             <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">Add Conversion</h2>
-                <hr>
+                <h2 class="logo-font mt-5 mb-4 text-white text-md-left text-center">Add Conversion</h2>
                 <a class="text-white" href="{% url 'profile' %}">
                     <span><i class="fas fa-chevron-left text-white"></i> GO TO PROFILE</span>
                 </a>
+                <hr>
             </div>
         </div>
 
