Update page header position and margin on smaller devices - listing_levels.html

--- a/products/templates/products/listing_levels.html
+++ b/products/templates/products/listing_levels.html
@@ -13,14 +13,14 @@
 <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">CHOOSE A SERVICE LEVEL</h2>
-                <hr>
+            <div class="col mt-2"> 
+                <h2 class="logo-font mt-5 mb-4 text-white text-lg-left text-center">CHOOSE A SERVICE LEVEL</h2>
                 {% if from_add_conversion_form %}
                 <a class="text-white" href="{% url 'conversions' %}">
                     <span><i class="fas fa-chevron-left text-white"></i> BACK TO FORM</span>
                 </a>
                 {% endif %}
+                <hr>
             </div>
         </div>
         <div class="row mt-5">
