Add margin to pag-header and adjust position to center on smaller devices - about us page

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -13,8 +13,8 @@
 <div class="overlay"></div>
     <div class="container page-content">
         <div class="row">
-            <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">ABOUT</h2>
+            <div class="col mt-2"> 
+                <h2 class="logo-font mt-5 mb-4 text-white text-center text-lg-left">ABOUT US</h2>
                 <hr>
             </div>
         </div>
