--- a/home/templates/home/faq.html
+++ b/home/templates/home/faq.html
@@ -13,8 +13,8 @@
 <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">FAQ</h2>
+            <div class="col mt-2"> 
+                <h2 class="logo-font mt-5 mb-4 text-white text-center text-lg-left">FAQ</h2>
                 <hr>
             </div>
         </div>
