Adjust page header properties on manage and approve conversion pages

--- a/conversions/templates/conversions/manage_conversions.html
+++ b/conversions/templates/conversions/manage_conversions.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col mt-4">
-                <h2 class="logo-font page-header text-white">Manage Conversions</h2>
+                <h2 class="logo-font page-header text-white mt-5 text-center text-md-left">Manage Conversions</h2>
             </div>
         </div>
         <div class="row">
