--- a/conversions/templates/conversions/approve_conversions.html
+++ b/conversions/templates/conversions/approve_conversions.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col mt-4">
-                <h2 class="logo-font page-header text-white">Approve Conversions</h2>
+                <h2 class="logo-font page-header text-white text-center mt-5 text-md-left">Approve Conversions</h2>
             </div>
         </div>
         <div class="row">
