Update pageheader position on smaller screens, move hr element below back button

--- a/conversions/templates/conversions/edit_conversion.html
+++ b/conversions/templates/conversions/edit_conversion.html
@@ -13,13 +13,13 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
+        <div class="row mt-3">
             <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">Edit Conversion</h2>
-                <hr>
+                <h2 class="logo-font mt-5 mb-4 text-white text-center text-md-left">Edit Conversion</h2>
                 <a class="text-white" href="{% url 'my_listings' %}">
                     <span><i class="fas fa-chevron-left text-white"></i> BACK TO MY LISTINGS</span>
                 </a>
+                <hr>
             </div>
         </div>
         <div class="row justify-content-center">
