--- a/profiles/templates/profiles/saved_listings.html
+++ b/profiles/templates/profiles/saved_listings.html
@@ -16,13 +16,13 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
+        <div class="row mt-3">
             <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">Saved Listings</h2>
-                <hr>
+                <h2 class="logo-font mt-5 mb-4 text-white text-center text-md-left">Saved Listings</h2>
                 <a class="text-white" href="{% url 'profile' %}">
                     <span><i class="fas fa-chevron-left text-white"></i> BACK TO PROFILE</span>
                 </a>
+                <hr>
             </div>
         </div>
         <div class="row mt-5">
