--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -38,14 +38,14 @@ tr {
 
 .card {
     border-radius: 20px;
-    border: 2px solid rgba(194,208,194);
+    border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .card-footer-profile-listing {
     border: unset;
     border-bottom-left-radius: 20px !important;
     border-bottom-right-radius: 20px !important;
-    border-top: 1px solid white;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 @media(max-width: 990px) {
