--- a/profiles/templates/profiles/message_portal.html
+++ b/profiles/templates/profiles/message_portal.html
@@ -16,19 +16,19 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
+        <div class="row mt-3">
             <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">Message Portal</h2>
-                <hr>
+                <h2 class="logo-font mt-5 mb-4 text-white text-center text-md-left">Message Portal</h2>
                 <a class="text-white" href="{% url 'profile' %}">
                     <span><i class="fas fa-chevron-left text-white"></i> BACK TO PROFILE</span>
                 </a>
+                <hr>
             </div>
         </div>
         <div class="row">
             <div class="col mt-4 mb-4 d-flex flex-column align-items-center">
                 <h2 class="text-white text-center mt-3">This feature is coming soon!</h2>
-                <h5 class="text-white text-center mb-3">A place to communicate with sellers.</h5>
+                <h5 class="text-white text-center mb-4">A platform to communicate with sellers.</h5>
                 <img class="" id="coming-soon-image" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="camper at night image">
             </div>
         </div>
