--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -16,9 +16,9 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
+        <div class="row mt-3">
             <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">My Profile</h2>
+                <h2 class="logo-font mt-5 mb-4 text-white text-center text-md-left">My Profile</h2>
                 <hr>
             </div>
         </div>
@@ -35,7 +35,7 @@
                 <form class="mt-3" action="{% url 'profile'%}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black rounded-2 text-uppercase float-right">Update Information</button>
+                    <button class="btn btn-light-green btn-outline-muted rounded-2 text-uppercase float-right">Update Information</button>
                 </form>
             </div>
         </div>
