Update shopping bag style to acheive consistency throughout site

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -428,6 +428,13 @@ a.category-badge > span.badge:hover {
 }
 
 
+/* --- Bag Styling --- */
+
+#plus-bag-button {
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
 /* ------- All Conversion Listings Page ------- */
 
 .card {
