--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -15,9 +15,9 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container mb-2">
-        <div class="row">
+        <div class="row mt-3">
             <div class="col"> 
-                <h2 class="logo-font mb-4 text-white mt-5">Shopping Bag</h2>
+                <h2 class="logo-font mb-4 text-white mt-5 text-md-left text-center">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
@@ -57,7 +57,7 @@
                                             <div class="form-group">
                                                 <div class="input-group">
                                                     <div class="input-group-prepend">
-                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0" 
+                                                        <button class="decrement-qty btn btn-sm btn-light-green rounded-2" 
                                                             data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                                                             <span>
                                                                 <i class="fas fa-minus fa-sm"></i>
@@ -69,7 +69,7 @@
                                                         data-item_id="{{ item.item_id }}"
                                                         id="id_qty_{{ item.item_id }}">
                                                     <div class="input-group-append">
-                                                        <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                        <button id="plus-bag-button" class="increment-qty btn btn-sm btn-light-green"
                                                             data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                                             <span>
                                                                 <i class="fas fa-plus fa-sm"></i>
@@ -85,7 +85,7 @@
                                             <div class="form-group">
                                                 <div class="input-group">
                                                     <div class="input-group-prepend">
-                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0">
+                                                        <button class="decrement-qty btn btn-sm btn-light-green rounded-2">
                                                             <span>
                                                                 <i class="fas fa-minus fa-sm"></i>
                                                             </span>
@@ -96,7 +96,7 @@
                                                         data-item_id="{{ item.item_id }}"
                                                         id="id_qty_{{ item.item_id }}" disabled>
                                                     <div class="input-group-append">
-                                                        <button class="increment-qty btn btn-sm btn-black rounded-0" disabled>
+                                                        <button id="plus-bag-button" class="increment-qty btn btn-sm btn-light-green" disabled>
                                                             <span>
                                                                 <i class="fas fa-plus fa-sm"></i>
                                                             </span>
@@ -109,8 +109,8 @@
                                             </div>
                                             {% endif %}
                                         </form>
-                                        <a class="update-link text-info"><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+                                        <a class="update-link bg-dark p-2 border-muted br-1 text-white"><small>Update</small></a>
+                                        <a class="remove-item bg-dark p-2 border-muted br-1 text-white float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
                                          
                                     </td>
                                     <td class="py-3">
@@ -132,13 +132,13 @@
                             </tr>
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-2 btn-lg">
                                         <span class="icon">
                                             <i class="fas fa-chevron-left"></i>
                                         </span>
                                         <span class="text-uppercase">Keep Shopping</span>
                                     </a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
+                                    <a href="{% url 'checkout' %}" class="btn btn-light-green text-white rounded-2 btn-lg">
                                         <span class="text-uppercase">Secure Checkout</span>
                                         <span class="icon">
                                             <i class="fas fa-lock"></i>
@@ -149,7 +149,7 @@
                         </table>
                     </div>
                 {% else %}
-                    <p class="lead mb-5 text-white">Your bag is empty.</p>
+                    <p class="lead mb-5 text-white text-md-left text-center">Your bag is empty.</p>
                     <a href="{% url 'products' %}" class="btn btn-outline-black rounded-2 btn-lg">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
