change view bag button colour, in toast success

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -41,7 +41,7 @@
                             Spend <strong>£{{ free_delivery_delta }}</strong> more to get free delivery!
                         </p>
                     {% endif %}
-                    <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-3">
+                    <a href="{% url 'view_bag' %}" class="btn btn-light-green border-black btn-block text-white rounded-2">
                         <span class="text-uppercase">View Your Bag</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
