--- a/templates/base.html
+++ b/templates/base.html
@@ -49,9 +49,9 @@
             <div class="col-12 col-lg-4 col-xl-2 my-auto py-1 py-lg-0">
                 <form method="GET" action="{% url 'conversions' %}">
                     <div class="input-group w-100">
-                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search conversions">
+                        <input class="form-control border border-muted rounded-3" type="text" name="q" placeholder="Search conversions">
                         <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                            <button class="form-control btn btn-black border-muted rounded-3" type="submit">
                                 <span class="icon">
                                     <i class="fas fa-search"></i>
                                 </span>
