--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,6 +12,19 @@
 {% endblock %}
 
 {% block content %}
+
+<div id="overlay-site-entry">
+    <div id="site-entry-content" class="row h-100 text-center">
+        <div class="col">
+            <div id="entry-overlay-content">
+                <img id="entry-overlay-logo" class="center-block mb-5" src="/media/wild_mile_logo_square.png" alt="wild mile logo">
+                <h3 class="text-white">A platform to buy and sell unique converted vehicles</h3>
+                <h5 class="text-center text-white mt-5">Click / Tap anywhere to enter</h5>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container h-100">
     <div class="row h-100">
         <div id="title-column" class="col">
@@ -26,4 +39,20 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+
+<!---- Site entry overlay ----->
+<script>
+
+    $('#overlay-site-entry').height($(document).height());
+
+    $(document).ready(function(){
+        $('#overlay-site-entry').click(function() {
+            $(this).css('opacity', 0);
+        });
+});
+</script>
+
 {% endblock %}
