--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -49,10 +49,20 @@
     $('#overlay-site-entry').height($(document).height());
 
     $(document).ready(function(){
+
+        // Check session storage to show overlay if first visit to site in browser tab //
+        if ( ! sessionStorage.getItem( 'doNotShow' ) ) {
+            sessionStorage.setItem( 'doNotShow', true );
+            $ ('#overlay-site-entry').show();
+        };
+        // Fade overlay and remove overlay div when clicked //
         $('#overlay-site-entry').click(function() {
             $(this).css('opacity', 0);
+            setTimeout(function(){
+                $('#overlay-site-entry').remove();
+            }, 1000);
         });
-});
+    });
 </script>
 
 {% endblock %}
