--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background: url('/media/homepage_background_cropped.jpg') no-repeat fixed center;
+    background: url('/media/site-background-main.jpeg') no-repeat fixed center;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -234,7 +234,7 @@ hr {
     background-color: #363E46;
     width: 100%;
     z-index: 9000;
-    display: block;
+    display: none;
     -webkit-transition: opacity 1000ms linear;
     transition: opacity 1000ms linear;
 }
