Change button style on checkout pages and adjust page header margin

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row">
             <div class="col mt-5"> 
-                <h2 class="logo-font mb-4 text-white">Shopping Bag</h2>
+                <h2 class="logo-font mb-4 mt-4 text-white">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
@@ -111,7 +111,7 @@
                             </span>
                             <span class="font-weight-bold">Adjust Bag</span>
                         </a>
-                        <button id="submit-button" class="btn btn-black rounded-2">
+                        <button id="submit-button" class="btn btn-light-green text-white rounded-2">
                             <span class="font-weight-bold">Complete Order</span>
                             <span class="icon">
                                 <i class="fas fa-lock"></i>
