--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col mt-5"> 
                 {% if from_profile %}
-                    <h2 class="logo-font mb-4 text-white">Order Details</h2>
+                    <h2 class="logo-font mb-4 mt-3 text-white">Order Details</h2>
                     <hr>
                     <p class="text-white">This is a past order confirmation. A confirmation email was sent to <strong>{{ order.email }} on the order date.</strong></p>
                 {% else %}
