Change page header margin on product pages and order history page

--- a/profiles/templates/profiles/view_order_history.html
+++ b/profiles/templates/profiles/view_order_history.html
@@ -17,12 +17,12 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">Order History</h2>
-                <hr>
+            <div class="col mt-3"> 
+                <h2 class="logo-font mt-5 mb-4 text-white text-md-left text-center">Order History</h2>
                 <a class="text-white" href="{% url 'profile' %}">
                     <span><i class="fas fa-chevron-left text-white"></i> BACK TO PROFILE</span>
                 </a>
+                <hr>
             </div>
         </div>
         <div class="row mt-4">
