--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -14,8 +14,8 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col"> 
-                <h2 class="logo-font mt-5 mb-4 text-white">Edit Product</h2>
+            <div class="col mt-3"> 
+                <h2 class="logo-font mt-5 mb-4 text-white text-md-left text-center">Edit Product</h2>
                 <hr>
             </div>
         </div>
