--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,13 +28,13 @@
 <div class="container h-100">
     <div class="row h-100">
         <div id="title-column" class="col">
-            <h1 id="home-title" class="display-4 logo-font text-center text-black scratched-font">
+            <h1 id="home-title" class="display-4 logo-font text-center scratched-font">
                 WILD MILE CONVERSIONS
             </h1>
-            <h3 class="text-center text-white">A platform to buy and sell unique converted vehicles</h3>
+            <h3 id="home-title-caption" class="text-center">A platform to buy and sell unique converted vehicles</h3>
             <div class="my-5">
                 <h4 class="text-center">
-                    <a href="{% url 'conversions' %}" class="see-conversions-button btn btn-lg rounded-2 text-uppercase text-white bg-light-green border-muted py-3">See Conversions</a></h4>
+                    <a href="{% url 'conversions' %}" id="home-title-button" class="see-conversions-button btn btn-lg rounded-2 text-uppercase text-white bg-light-green border-muted">See Conversions</a></h4>
             </div>
         </div>
     </div>
